# plato-feed

./: Cargo.toml  LICENSE  README.md  Settings.toml
.github/workflows/: build.yml
src/: client.rs  db.rs  feed.rs  html.rs  main.rs  plato.rs  settings.rs
