[package]
authors = ["Michael McDonagh"]
name = "plato-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
epub-builder = "0.7"
feed-rs = "2.3"
futures = "0.3"
lazy_static = "1.5"
log-panics = { version = "2.1", features = ["with-backtrace"] }
regex = "1"
reqwest = { version = "0.12.2", features = [
	"rustls-tls",
	"json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slugify = "0.1"
signal-hook = "0.3"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
url = "2.5"
